--- a/select2-materialize.css
+++ b/select2-materialize.css
@@ -5,6 +5,9 @@
     position: relative;
     vertical-align: middle
 }
+.select2 {
+    width: 100% !important;
+}
 
 .select2-container .select2-selection--single {
     box-sizing: border-box;
